# myriad

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  myriad.fut  perf_notes.md  run.sh  simulation.fut  sort_comparison.md
src/: main.rs
