[package]
name = "myriad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8.5"
half = "2.3"

[build-dependencies]
futhark-bindgen = { version = "0.2.6", default-features = false, features = [
    "build",
] }
